soup_headers_parse: deal with NUL bytes in headers

https://bugzilla.gnome.org/show_bug.cgi?id=760832